force-app/main/default/objects/Annual_Survey__c/Annual_Survey__c.object-meta.xml
<CustomObject>
    <description>Contains date and fields that are overridden in account record</description>
    <label>Annual Survey</label>
    <nameField>
        <displayFormat>AS-{0000}</displayFormat>
        <label>Annual Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annual Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>