force-app/main/default/objects/Annual_Survey__c/fields/Adult_Incontinence__c.field-meta.xml
<CustomField>
    <fullName>Adult_Incontinence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>including bladder control products</description>
    <label>Adult Incontinence</label>
    <type>Checkbox</type>
</CustomField>