force-app/main/default/objects/Annual_Survey__c/fields/Adults__c.field-meta.xml
<CustomField>
    <fullName>Adults__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Recipient type includes adults</description>
    <inlineHelpText>Recipient type includes adults</inlineHelpText>
    <label>Adults</label>
    <type>Checkbox</type>
</CustomField>