force-app/main/default/objects/Annual_Survey__c/fields/Adults_Served_Month_AnSv__c.field-meta.xml
<CustomField>
    <fullName>Adults_Served_Month_AnSv__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Adults Served Month AnSv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>