force-app/main/default/objects/Annual_Survey__c/fields/Advocacy_Lobbying_Activities__c.field-meta.xml
<CustomField>
    <fullName>Advocacy_Lobbying_Activities__c</fullName>
    <inlineHelpText>If you participated in advocacy or lobbying activities describe them.</inlineHelpText>
    <label>Advocacy-Lobbying Activities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>