force-app/main/default/objects/Annual_Survey__c/fields/Advocacy_Work__c.field-meta.xml
<CustomField>
    <fullName>Advocacy_Work__c</fullName>
    <label>Advocacy Work Done</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>