force-app/main/default/objects/Annual_Survey__c/fields/Agencies_Served_AnSv__c.field-meta.xml
<CustomField>
    <fullName>Agencies_Served_AnSv__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Partner Agencies served with diaper supplies</inlineHelpText>
    <label>Partner Agencies AnSv DB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>