force-app/main/default/objects/Annual_Survey__c/fields/Annual_Diaper_Expense_AnSv__c.field-meta.xml
<CustomField>
    <fullName>Annual_Diaper_Expense_AnSv__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Annual Diaper Expense AnSv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>