force-app/main/default/objects/Annual_Survey__c/fields/Annual_Distribution_AnSv__c.field-meta.xml
<CustomField>
    <fullName>Annual_Distribution_AnSv__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Annual Distribution AnSv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>