force-app/main/default/objects/Annual_Survey__c/fields/APS_Partner_Agencies__c.field-meta.xml
<CustomField>
    <fullName>APS_Partner_Agencies__c</fullName>
    <defaultValue>0</defaultValue>
    <label>APS Partner Agencies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>