force-app/main/default/objects/Annual_Survey__c/fields/APS_Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>APS_Primary_Contact_Email__c</fullName>
    <inlineHelpText>Verify that this survey response matches what is on the account&apos;s AFFILIATION and CONTACT record.</inlineHelpText>
    <label>APS Primary Contact Email</label>
    <type>Email</type>
</CustomField>