force-app/main/default/objects/Annual_Survey__c/fields/APS_Primary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>APS_Primary_Contact_Name__c</fullName>
    <inlineHelpText>Verify that this survey response matches what is on the account and affiliation record.</inlineHelpText>
    <label>APS Primary Contact Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>