force-app/main/default/objects/Annual_Survey__c/fields/Assigned_staff__c.field-meta.xml
<CustomField>
    <fullName>Assigned_staff__c</fullName>
    <formula>Account__r.Assigned_staff__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned staff</label>
    <type>Text</type>
</CustomField>