force-app/main/default/objects/Annual_Survey__c/fields/At_Poverty_Clients_AnSv__c.field-meta.xml
<CustomField>
    <fullName>At_Poverty_Clients_AnSv__c</fullName>
    <defaultValue>0</defaultValue>
    <label>At Poverty Client AnSv</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>