force-app/main/default/objects/Annual_Survey__c/fields/Baby_Food__c.field-meta.xml
<CustomField>
    <fullName>Baby_Food__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>formula, baby food, other</inlineHelpText>
    <label>Baby Food</label>
    <type>Checkbox</type>
</CustomField>