force-app/main/default/objects/Annual_Survey__c/fields/Baby_Wipes__c.field-meta.xml
<CustomField>
    <fullName>Baby_Wipes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Baby Wipes</label>
    <type>Checkbox</type>
</CustomField>