force-app/main/default/objects/Annual_Survey__c/fields/Bay_Door_9_ft_AnSv__c.field-meta.xml
<CustomField>
    <fullName>Bay_Door_9_ft_AnSv__c</fullName>
    <inlineHelpText>bay door for the storage space at least 108&quot; tall</inlineHelpText>
    <label>Bay Door 9 ft AnSv</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>