force-app/main/default/objects/Annual_Survey__c/fields/Board_Composition_50__c.field-meta.xml
<CustomField>
    <fullName>Board_Composition_50__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>50% or more of board members identify as Black or African American</inlineHelpText>
    <label>50% Board is Black</label>
    <type>Checkbox</type>
</CustomField>