force-app/main/default/objects/Annual_Survey__c/fields/Board_fundraises_for_basic_needs_bank__c.field-meta.xml
<CustomField>
    <fullName>Board_fundraises_for_basic_needs_bank__c</fullName>
    <label>Board fundraises for basic needs bank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>