force-app/main/default/objects/Annual_Survey__c/fields/Board_recruitment_plan__c.field-meta.xml
<CustomField>
    <fullName>Board_recruitment_plan__c</fullName>
    <inlineHelpText>The question is Do you have a board recruitment plan?</inlineHelpText>
    <label>Board recruitment plan?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No or not sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>