force-app/main/default/objects/Annual_Survey__c/fields/Books_Childrens__c.field-meta.xml
<CustomField>
    <fullName>Books_Childrens__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Books-Childrens</label>
    <type>Checkbox</type>
</CustomField>