force-app/main/default/objects/Annual_Survey__c/fields/Breastfeeding_Supplies__c.field-meta.xml
<CustomField>
    <fullName>Breastfeeding_Supplies__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>breast pump, nursing bras, pads</inlineHelpText>
    <label>Breastfeeding Supplies</label>
    <type>Checkbox</type>
</CustomField>