force-app/main/default/objects/Annual_Survey__c/fields/Budget_Basic_Needs_Bank_Annual__c.field-meta.xml
<CustomField>
    <fullName>Budget_Basic_Needs_Bank_Annual__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Provide the Basic Needs Bank&apos;s annual operating budget for the current year. Enter 0 if you aren&apos;t sure or do not have a budget for the basic needs bank.</inlineHelpText>
    <label>Budget-Basic Needs Bank Annual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>