force-app/main/default/objects/Annual_Survey__c/fields/Cloth_Diapers__c.field-meta.xml
<CustomField>
    <fullName>Cloth_Diapers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Cloth diapers distributed</inlineHelpText>
    <label>Cloth Diapers</label>
    <type>Checkbox</type>
</CustomField>