force-app/main/default/objects/Annual_Survey__c/fields/Clothing_Adult__c.field-meta.xml
<CustomField>
    <fullName>Clothing_Adult__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clothing-Adult</label>
    <type>Checkbox</type>
</CustomField>