force-app/main/default/objects/Annual_Survey__c/fields/Clothing_Children__c.field-meta.xml
<CustomField>
    <fullName>Clothing_Children__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clothing-Children</label>
    <type>Checkbox</type>
</CustomField>