force-app/main/default/objects/Annual_Survey__c/fields/Conduct_Client_Surveys__c.field-meta.xml
<CustomField>
    <fullName>Conduct_Client_Surveys__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conduct Client Surveys</label>
    <type>Checkbox</type>
</CustomField>