force-app/main/default/objects/Annual_Survey__c/fields/Corporate__c.field-meta.xml
<CustomField>
    <fullName>Corporate__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Percent of overall funding from Corporate Donation</inlineHelpText>
    <label>Corporate Donation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>