force-app/main/default/objects/Annual_Survey__c/fields/Diaper_Kind_AnSv__c.field-meta.xml
<CustomField>
    <fullName>Diaper_Kind_AnSv__c</fullName>
    <label>Diaper Kind AnSv</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Disposable</fullName>
            </value>
            <value>
                <fullName>Cloth</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>