force-app/main/default/objects/Annual_Survey__c/fields/Diaper_Rash_Cream__c.field-meta.xml
<CustomField>
    <fullName>Diaper_Rash_Cream__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Diapering Supplies (Diaper Rash Cream)</inlineHelpText>
    <label>Diaper Rash Cream</label>
    <type>Checkbox</type>
</CustomField>