force-app/main/default/objects/Annual_Survey__c/fields/Diapers_Per_Child_Month_AnSv__c.field-meta.xml
<CustomField>
    <fullName>Diapers_Per_Child_Month_AnSv__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Diapers Per Child Month AnSv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>