force-app/main/default/objects/Annual_Survey__c/fields/Diapers_Purchased_AnSv__c.field-meta.xml
<CustomField>
    <fullName>Diapers_Purchased_AnSv__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Diapers Purchased AnSv</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>