force-app/main/default/objects/Annual_Survey__c/fields/Donated_Period_Supplies__c.field-meta.xml
<CustomField>
    <fullName>Donated_Period_Supplies__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Percent of period supplies that were donated to supply bank</inlineHelpText>
    <label>Donated Period Supplies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>