force-app/main/default/objects/Annual_Survey__c/fields/Drives_AnSv__c.field-meta.xml
<CustomField>
    <fullName>Drives_AnSv__c</fullName>
    <label>Drives AnSv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>