force-app/main/default/objects/Annual_Survey__c/fields/ED_identifies_as_Black_AA__c.field-meta.xml
<CustomField>
    <fullName>ED_identifies_as_Black_AA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Executive Director&apos;s race and ethnicity was identified as Black or African American</inlineHelpText>
    <label>ED identifies as Black/AA</label>
    <type>Checkbox</type>
</CustomField>