force-app/main/default/objects/Annual_Survey__c/fields/ED_is_founder__c.field-meta.xml
<CustomField>
    <fullName>ED_is_founder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The executive director is the founder</description>
    <label>ED is founder</label>
    <type>Checkbox</type>
</CustomField>