force-app/main/default/objects/Annual_Survey__c/fields/Elected_Reps_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Elected_Reps_Contacted__c</fullName>
    <label>Elected Reps Contacted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>