force-app/main/default/objects/Annual_Survey__c/fields/Events__c.field-meta.xml
<CustomField>
    <fullName>Events__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Percent of overall funding from fundraising events</inlineHelpText>
    <label>Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>