force-app/main/default/objects/Annual_Survey__c/fields/Founder_Compensated__c.field-meta.xml
<CustomField>
    <fullName>Founder_Compensated__c</fullName>
    <inlineHelpText>This question is conditional on if the Organization&apos;s leader is the founder.</inlineHelpText>
    <label>Is Founder Compensated?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes fair compensation and benefits for a full-time position.</fullName>
            </value>
            <value>
                <fullName>Yes but lower than market compensation for a full-time position.</fullName>
            </value>
            <value>
                <fullName>Compensation for a part-time position.</fullName>
            </value>
            <value>
                <fullName>Not compensated for work</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>