force-app/main/default/objects/Annual_Survey__c/fields/Founder_ED_Paid_Full_Time__c.field-meta.xml
<CustomField>
    <fullName>Founder_ED_Paid_Full_Time__c</fullName>
    <label>Founder ED Paid Full Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes fair compensation for FTE</fullName>
            </value>
            <value>
                <fullName>Yes but below market comp for FTE</fullName>
            </value>
            <value>
                <fullName>No ED paid for part time</fullName>
            </value>
            <value>
                <fullName>No compensation for ED</fullName>
            </value>
            <value>
                <fullName>Other (see survey)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>