force-app/main/default/objects/Annual_Survey__c/fields/Fundraising_Methods_AnSv__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Methods_AnSv__c</fullName>
    <label>Fundraising Methods AnSv</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grants</fullName>
            </value>
            <value>
                <fullName>Individual Donors</fullName>
            </value>
            <value>
                <fullName>Fundraising Events</fullName>
            </value>
            <value>
                <fullName>Corporate Donations</fullName>
            </value>
            <value>
                <fullName>Government Funding</fullName>
            </value>
            <value>
                <fullName>Do not raise money</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>