force-app/main/default/objects/Annual_Survey__c/fields/Goal_for_Upcoming_Year__c.field-meta.xml
<CustomField>
    <fullName>Goal_for_Upcoming_Year__c</fullName>
    <label>Goal for Upcoming Year</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>