force-app/main/default/objects/Annual_Survey__c/fields/Government__c.field-meta.xml
<CustomField>
    <fullName>Government__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Percent of overall funding from government</inlineHelpText>
    <label>Government</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>