force-app/main/default/objects/Annual_Survey__c/fields/Government_Funding_Received__c.field-meta.xml
<CustomField>
    <fullName>Government_Funding_Received__c</fullName>
    <inlineHelpText>Non-monetary support could be office or warehouse space, personnel, etc.</inlineHelpText>
    <label>Government Funding Received</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Non-monetary support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>