force-app/main/default/objects/Annual_Survey__c/fields/Govt_Officials_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Govt_Officials_Contacted__c</fullName>
    <inlineHelpText>Names of government officials contacted.</inlineHelpText>
    <label>Govt Officials Contacted</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>