force-app/main/default/objects/Annual_Survey__c/fields/Grant_Funding_Total__c.field-meta.xml
<CustomField>
    <fullName>Grant_Funding_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Grant Funding Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>