force-app/main/default/objects/Annual_Survey__c/fields/Grants__c.field-meta.xml
<CustomField>
    <fullName>Grants__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Percent of overall funding from grants</inlineHelpText>
    <label>Grants</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>