force-app/main/default/objects/Annual_Survey__c/fields/Grants_Applied__c.field-meta.xml
<CustomField>
    <fullName>Grants_Applied__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of grants applied for</description>
    <label>Grants Applied</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>