force-app/main/default/objects/Annual_Survey__c/fields/Grants_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Grants_Awarded__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of grant awards received</description>
    <label>Grants Awarded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>