force-app/main/default/objects/Annual_Survey__c/fields/House_cleaning_supplies__c.field-meta.xml
<CustomField>
    <fullName>House_cleaning_supplies__c</fullName>
    <defaultValue>false</defaultValue>
    <description>floor cleaner, window cleaner, etc.</description>
    <label>House cleaning supplies</label>
    <type>Checkbox</type>
</CustomField>