force-app/main/default/objects/Annual_Survey__c/fields/Impact_by_natural_disaster__c.field-meta.xml
<CustomField>
    <fullName>Impact_by_natural_disaster__c</fullName>
    <inlineHelpText>Was your service area impacted by a natural disaster this year?</inlineHelpText>
    <label>Impact by natural disaster</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>