force-app/main/default/objects/Annual_Survey__c/fields/Individual_Donations__c.field-meta.xml
<CustomField>
    <fullName>Individual_Donations__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Percent of overall funding from individual donations</inlineHelpText>
    <label>Individual Donations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>