force-app/main/default/objects/Annual_Survey__c/fields/Individual_Donors__c.field-meta.xml
<CustomField>
    <fullName>Individual_Donors__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of individual donors</inlineHelpText>
    <label>Individual Donors</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>