force-app/main/default/objects/Annual_Survey__c/fields/Individuals_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Individuals_Monthly__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>APS - Average number of individuals served montly</inlineHelpText>
    <label>Individuals monthly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>