force-app/main/default/objects/Annual_Survey__c/fields/Infants_Toddlers__c.field-meta.xml
<CustomField>
    <fullName>Infants_Toddlers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Recipient Type includes Infants/Toddlers</description>
    <inlineHelpText>Recipient Type includes Infants/Toddlers</inlineHelpText>
    <label>Infants/Toddlers</label>
    <type>Checkbox</type>
</CustomField>