force-app/main/default/objects/Annual_Survey__c/fields/Interested_in_NDBN_Research__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_NDBN_Research__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in NDBN Research</label>
    <type>Checkbox</type>
</CustomField>