force-app/main/default/objects/Annual_Survey__c/fields/Laundry_Supplies__c.field-meta.xml
<CustomField>
    <fullName>Laundry_Supplies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Laundry Supplies</label>
    <type>Checkbox</type>
</CustomField>