force-app/main/default/objects/Annual_Survey__c/fields/Liners_distributed__c.field-meta.xml
<CustomField>
    <fullName>Liners_distributed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Liners distributed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>