force-app/main/default/objects/Annual_Survey__c/fields/Low_Income_Clients_AnSv__c.field-meta.xml
<CustomField>
    <fullName>Low_Income_Clients_AnSv__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Low Income Clients AnSv</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>