force-app/main/default/objects/Annual_Survey__c/fields/Masks__c.field-meta.xml
<CustomField>
    <fullName>Masks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Masks</label>
    <type>Checkbox</type>
</CustomField>