force-app/main/default/objects/Annual_Survey__c/fields/Media_Mentions__c.field-meta.xml
<CustomField>
    <fullName>Media_Mentions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Media Mentions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>