force-app/main/default/objects/Annual_Survey__c/fields/Member_Share__c.field-meta.xml
<CustomField>
    <fullName>Member_Share__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Member opted in to share member survey data with others</description>
    <label>Member-Share</label>
    <type>Checkbox</type>
</CustomField>