force-app/main/default/objects/Annual_Survey__c/fields/Menstrual_Cups__c.field-meta.xml
<CustomField>
    <fullName>Menstrual_Cups__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Menstrual Cups</label>
    <type>Checkbox</type>
</CustomField>