force-app/main/default/objects/Annual_Survey__c/fields/Month_Children_Served_AnSv__c.field-meta.xml
<CustomField>
    <fullName>Month_Children_Served_AnSv__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Mo Child Served AnSv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>