force-app/main/default/objects/Annual_Survey__c/fields/Monthly_Distrib_AnSv__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Distrib_AnSv__c</fullName>
    <label>Monthly Distrib AnSv</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-500</fullName>
            </value>
            <value>
                <fullName>500-1,000</fullName>
            </value>
            <value>
                <fullName>1,000-2,500</fullName>
            </value>
            <value>
                <fullName>2,500-5,000</fullName>
            </value>
            <value>
                <fullName>5,000-10,000</fullName>
            </value>
            <value>
                <fullName>10,000-25,000</fullName>
            </value>
            <value>
                <fullName>25,000-50,000</fullName>
            </value>
            <value>
                <fullName>50,000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>