force-app/main/default/objects/Annual_Survey__c/fields/Most_Proud_of_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Most_Proud_of_Last_Year__c</fullName>
    <label>Most Proud of Last Year</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>