force-app/main/default/objects/Annual_Survey__c/fields/NDBN_Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>NDBN_Primary_Contact_Email__c</fullName>
    <inlineHelpText>Verify that this survey response matches what is on the account&apos;s affiliation and contact record.</inlineHelpText>
    <label>NDBN Primary Contact Email</label>
    <type>Email</type>
</CustomField>