force-app/main/default/objects/Annual_Survey__c/fields/NDBN_Primary_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>NDBN_Primary_Contact_Title__c</fullName>
    <inlineHelpText>Verify our database matches this survey response. (The title on the affiliation record pulls from the contact record.)</inlineHelpText>
    <label>NDBN Primary Contact Title</label>
    <length>200</length>
    <type>Text</type>
</CustomField>