force-app/main/default/objects/Annual_Survey__c/fields/NDNAW_Participation__c.field-meta.xml
<CustomField>
    <fullName>NDNAW_Participation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NDNAW Participation</label>
    <type>Checkbox</type>
</CustomField>