force-app/main/default/objects/Annual_Survey__c/fields/Non_Diaper_Items_AnSv__c.field-meta.xml
<CustomField>
    <fullName>Non_Diaper_Items_AnSv__c</fullName>
    <label>Non-Diaper Items AnSv</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>