force-app/main/default/objects/Annual_Survey__c/fields/Non_Diaper_Items_Other_AnSv__c.field-meta.xml
<CustomField>
    <fullName>Non_Diaper_Items_Other_AnSv__c</fullName>
    <label>Non-Diaper Items-Other AnSv</label>
    <type>TextArea</type>
</CustomField>