force-app/main/default/objects/Annual_Survey__c/fields/Number_of_board_members__c.field-meta.xml
<CustomField>
    <fullName>Number_of_board_members__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of board members</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>