force-app/main/default/objects/Annual_Survey__c/fields/Older_Children__c.field-meta.xml
<CustomField>
    <fullName>Older_Children__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Recipient type includes older children</description>
    <inlineHelpText>Recipient type includes older children</inlineHelpText>
    <label>Older Children</label>
    <type>Checkbox</type>
</CustomField>