force-app/main/default/objects/Annual_Survey__c/fields/Oral_Hygiene__c.field-meta.xml
<CustomField>
    <fullName>Oral_Hygiene__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>toothpaste, toothbrushes, floss</inlineHelpText>
    <label>Oral Hygiene</label>
    <type>Checkbox</type>
</CustomField>