force-app/main/default/objects/Annual_Survey__c/fields/Organization_Leader_if_other__c.field-meta.xml
<CustomField>
    <fullName>Organization_Leader_if_other__c</fullName>
    <inlineHelpText>Name of Senior Executive to whom the primary contact reports, if not the board</inlineHelpText>
    <label>Organization Leader (if other)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>