force-app/main/default/objects/Annual_Survey__c/fields/Organization_Leader_is_its_Founder__c.field-meta.xml
<CustomField>
    <fullName>Organization_Leader_is_its_Founder__c</fullName>
    <inlineHelpText>Is the exempt Organization&apos;s current leader its founder?</inlineHelpText>
    <label>Organization Leader is its Founder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>