force-app/main/default/objects/Annual_Survey__c/fields/Organization_Leader_s_Title__c.field-meta.xml
<CustomField>
    <fullName>Organization_Leader_s_Title__c</fullName>
    <label>Organization Leader&apos;s Title (if other)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>